--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -18,6 +18,12 @@ jobs:
         docker build --target test -t xyz .
         docker run --rm xyz
 
+    - name: 🧪 backend Rotator
+      run: |
+        cd src/backend/rotator
+        docker build --target test -t xyz .
+        docker run --rm xyz
+
   npm_build:
 
     runs-on: ubuntu-latest
@@ -44,6 +50,8 @@ jobs:
       run: |
         cd src/backend/merger
         docker build . --target prod --file Dockerfile --tag pdf-editor:$(date +%s)
+        cd ../rotator
+        docker build . --target prod --file Dockerfile --tag pdf-editor:$(date +%s)
         cd ../../frontend
         docker build . --target prod --file Dockerfile --tag pdf-editor:$(date +%s)
 
@@ -56,9 +64,9 @@ jobs:
     env:
       SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
       BACKEND_MERGE: dipugodocker/pdf-editor:backend-merge
-      BACKEND_DATABASE: dipugodocker/pdf-editor:backend-db
       BACKEND_ROTATE: dipugodocker/pdf-editor:backend-rotate
       FRONTEND: dipugodocker/pdf-editor:frontend
+    # BACKEND_DATABASE: dipugodocker/pdf-editor:backend-db
 
     name: Install Cosign and test presence in path
     steps:
@@ -81,39 +89,26 @@ jobs:
 
       - name: push all
         run: |
-          docker push $BACKEND_DATABASE
           docker push $BACKEND_MERGE
           docker push $BACKEND_ROTATE
           docker push $FRONTEND
+        # docker push $BACKEND_DATABASE
 
       - name: sign
         run: |
           echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $FRONTEND
           echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $BACKEND_MERGE
           echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $BACKEND_ROTATE
-          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $BACKEND_DATABASE
+        # echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $BACKEND_DATABASE
 
       - name: verify
         run: |
           echo "Frontend Verify"
           cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $FRONTEND | jq .
           echo "Backend images Verify"
-          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $BACKEND_DATABASE | jq .
           cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $BACKEND_MERGE | jq .
           cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $BACKEND_ROTATE | jq .
-
-  ansible_update:
-    needs: [test_cosign_action]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Ansible and version
-        run: |
-          sudo apt install ansible -y
-          ansible --version
-      - name: Start the update
-        run: |
-          echo "TODO: Add the continuous delevery after CI"
+        # cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $BACKEND_DATABASE | jq .
 
 
 
