--- a/deploy/cluster/okteto/svc.yml
+++ b/deploy/cluster/okteto/svc.yml
@@ -9,3 +9,17 @@ spec:
   - port: 8080
     targetPort: backend-port
     protocol: TCP
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-rotate
+spec:
+  selector:
+    app: backend-rotate
+  ports:
+  - port: 8081
+    targetPort: rotate-port
+    protocol: TCP
