--- a/deploy/cluster/okteto/deploy-pdf.yml
+++ b/deploy/cluster/okteto/deploy-pdf.yml
@@ -66,7 +66,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pdf-editor-backend
+  name: pdf-editor-rotate
   labels:
     app: backend-rotate
 spec:
@@ -96,7 +96,7 @@ spec:
 
       containers:
         - name: pdf-editor
-          image: docker.io/dipugodocker/pdf-editor:backend-merge
+          image: docker.io/dipugodocker/pdf-editor:backend-rotate
           volumeMounts:
           - name: backend
             mountPath: /go/src/
