[K8s](Oketto) fix manifest

--- a/deploy/cluster/okteto/deploy-pdf.yml
+++ b/deploy/cluster/okteto/deploy-pdf.yml
@@ -116,7 +116,7 @@ spec:
           readinessProbe:
             httpGet:
               port: 8081
-              path: /about
+              path: /greet
             initialDelaySeconds: 5
             periodSeconds: 10
           ports:
