--- a/deploy/rollouts/backend-preview-svc.yml
+++ b/deploy/rollouts/backend-preview-svc.yml
@@ -1,14 +1,30 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-preview
+  name: backend-merge-preview
   namespace: pdf-editor-ns
   annotations:
     blue-green: 'true'
 spec:
   selector:
-    app: backend-main
+    app: backend-merger
   ports:
   - port: 8080
     targetPort: backend-port
     protocol: TCP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-rotate-preview
+  namespace: pdf-editor-ns
+  annotations:
+    blue-green: 'true'
+spec:
+  selector:
+    app: backend-merger
+  ports:
+  - port: 8081
+    targetPort: backend-port
+    protocol: TCP
+...
