--- a/deploy/rollouts/backend-preview-svc.yml
+++ b/deploy/rollouts/backend-preview-svc.yml
@@ -7,7 +7,7 @@ metadata:
     blue-green: 'true'
 spec:
   selector:
-    app: backend-merger
+    app: backend-merge
   ports:
   - port: 8080
     targetPort: backend-port
@@ -22,7 +22,7 @@ metadata:
     blue-green: 'true'
 spec:
   selector:
-    app: backend-merger
+    app: backend-rotate
   ports:
   - port: 8081
     targetPort: backend-port
