--- a/deploy/cluster/backend/pv.yml
+++ b/deploy/cluster/backend/pv.yml
@@ -1,14 +1,14 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: pdf-editor-pvc
-  labels:
-    pvc: pdf
-  namespace: pdf-editor-ns
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: standard
-  resources:
-    requests:
-      storage: 50Mi
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: pdf-editor-pvc
+#   labels:
+#     pvc: pdf
+#   namespace: pdf-editor-ns
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   storageClassName: standard
+#   resources:
+#     requests:
+#       storage: 50Mi
