--- a/.github/workflows/CI-kubescape.yml
+++ b/.github/workflows/CI-kubescape.yml
@@ -1,3 +1,4 @@
+---
 name: K8s Manifest Sec checks Kubescape
 
 on:
@@ -18,7 +19,10 @@ jobs:
       run: 'curl -s https://raw.githubusercontent.com/kubescape/kubescape/master/install.sh | /bin/bash'
     
     - name: 🧪 Kubescape version
-      run: kubescape --version
+      run: kubescape version
     
-    - name: Say Hello
-      run: echo "Nice Security checks for k8s"
+    - name: Check the backend
+      run: |
+        cd deploy/cluster/backend
+        kubescape scan $(ls | grep -e '.ya*ml')
+...
