[Security](Kubescape) Added the scans for backend and frontend
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/.github/workflows/CI-kubescape.yml
+++ b/.github/workflows/CI-kubescape.yml
@@ -25,4 +25,9 @@ jobs:
       run: |
         cd deploy/cluster/backend
         kubescape scan $(ls | grep -e '.ya*ml')
+    
+    - name: Check the frontend
+      run: |
+        cd deploy/cluster/frontend
+        kubescape scan $(ls | grep -e '.ya*ml')
 ...
