Done Adding Skaffold
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/src/dev-manifests/frontend/deploy-pdf.yml
+++ b/src/dev-manifests/frontend/deploy-pdf.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: pdf-editor-frontend
-        image: pdf-editor-frontend
+        image: dipugodocker/skaffold-pdf-editor-frontend
         resources:
           requests:
               memory: "50Mi"
