--- a/deploy/cluster/backend/svc.yml
+++ b/deploy/cluster/backend/svc.yml
@@ -3,11 +3,14 @@ kind: Service
 metadata:
   name: backend-merge
   namespace: pdf-editor-ns
+  labels:
+    service: backend-merge
 spec:
   selector:
     app: backend-merge
   ports:
   - port: 8080
+    name: web
     targetPort: backend-port
     protocol: TCP
 ---
@@ -16,10 +19,13 @@ kind: Service
 metadata:
   name: backend-rotate
   namespace: pdf-editor-ns
+  labels:
+    service: backend-rotate
 spec:
   selector:
     app: backend-rotate
   ports:
   - port: 8081
+    name: web
     targetPort: backend-port
     protocol: TCP
