--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.2.10",
     "path": "^0.12.7",
+    "prom-client": "^14.1.0",
     "supertest": "^6.2.4"
   }
 }
