[Observability](Prom & Grafana) Added full stack of them
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/deploy/cluster/cilium/backend-merge.yml
+++ b/deploy/cluster/cilium/backend-merge.yml
@@ -10,7 +10,7 @@ spec:
   ingress:
     - fromEndpoints:
         - matchLabels:
-            name: pdf-editor-lb
+            name: pdf-editor-frontend
       toPorts:
         - ports:
             - port: "8080"
@@ -30,5 +30,5 @@ spec:
         - k8sServiceSelector:
             selector:
               matchLabels:
-                name: pdf-editor-lb
+                name: pdf-editor-frontend
 
