[Observability](Prom & Grafana) Improve the rollout deployments
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/deploy/rollouts/backend-preview-svc.yml
+++ b/deploy/rollouts/backend-preview-svc.yml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: backend-merge-preview
   namespace: pdf-editor-ns
+  labels:
+    service: backend-merge
   annotations:
     blue-green: 'true'
 spec:
@@ -10,6 +12,7 @@ spec:
     app: backend-merge
   ports:
   - port: 8080
+    name: web
     targetPort: backend-port
     protocol: TCP
 ---
@@ -18,6 +21,8 @@ kind: Service
 metadata:
   name: backend-rotate-preview
   namespace: pdf-editor-ns
+  labels:
+    service: backend-rotate
   annotations:
     blue-green: 'true'
 spec:
@@ -25,6 +30,7 @@ spec:
     app: backend-rotate
   ports:
   - port: 8081
+    name: web
     targetPort: backend-port
     protocol: TCP
 ...
