--- a/deploy/cluster/pdf-editor-helm/Chart.yaml
+++ b/deploy/cluster/pdf-editor-helm/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: pdf-editor-helm
-description: A Helm chart for pdf-editor
+description: A Helm chart for pdf-editor application
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,13 +15,13 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.8.0
+version: 1.0.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.8"
+appVersion: "1.0"
 
 maintainers:
   - name: Dipankar Das
