--- a/deploy/cluster/artifact/index.yaml
+++ b/deploy/cluster/artifact/index.yaml
@@ -2,8 +2,21 @@ apiVersion: v1
 entries:
   pdf-editor-helm:
   - apiVersion: v2
+    appVersion: "1.0"
+    created: "2022-10-13T18:32:54.645618135+05:30"
+    description: A Helm chart for pdf-editor application
+    digest: a4115b5816dee040770efa74dc270898da44b0b23597ea5f4c523b1f9c50957f
+    maintainers:
+    - email: dipankardas0115@gmail.com
+      name: Dipankar Das
+    name: pdf-editor-helm
+    type: application
+    urls:
+    - pdf-editor-helm-1.0.0.tgz
+    version: 1.0.0
+  - apiVersion: v2
     appVersion: "0.8"
-    created: "2022-09-16T20:51:08.089381881+05:30"
+    created: "2022-10-13T18:32:54.644698761+05:30"
     description: A Helm chart for pdf-editor
     digest: b7073ddfb8a3e98359490959e8504255751ddf7e8495035d948e2fa62d08cfcf
     maintainers:
@@ -14,4 +27,4 @@ entries:
     urls:
     - pdf-editor-helm-0.8.0.tgz
     version: 0.8.0
-generated: "2022-09-16T20:51:08.088881836+05:30"
+generated: "2022-10-13T18:32:54.643365083+05:30"
