Fix for the github actions
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/.github/workflows/imageScan.yaml
+++ b/.github/workflows/imageScan.yaml
@@ -25,18 +25,29 @@ jobs:
       - name: Build an image from Dockerfile
         run: |
           cd src/backend/merger
-          docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
+          docker build -t docker.io/my-organization/my-appm:${{ github.sha }} .
+          cd ../rotator
+          docker build -t docker.io/my-organization/my-appr:${{ github.sha }} .
           cd ../../frontend
           docker build -t docker.io/my-organization/my-appf:${{ github.sha }} .
 
-      - name: Run Trivy vulnerability scanner(backend)
+      - name: Run Trivy vulnerability scanner(backend-merger)
         uses: aquasecurity/trivy-action@cb606dfdb0d2b3698ace62192088ef4f5360b24f
         with:
-          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          image-ref: 'docker.io/my-organization/my-appm:${{ github.sha }}'
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL'
+
+      - name: Run Trivy vulnerability scanner(backend-rotator)
+        uses: aquasecurity/trivy-action@cb606dfdb0d2b3698ace62192088ef4f5360b24f
+        with:
+          image-ref: 'docker.io/my-organization/my-appr:${{ github.sha }}'
+          format: 'template'
+          template: '@/contrib/sarif.tpl'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL'
 
       - name: Run Trivy vulnerability scanner(frontend)
         uses: aquasecurity/trivy-action@cb606dfdb0d2b3698ace62192088ef4f5360b24f
@@ -45,7 +56,7 @@ jobs:
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL'
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
