[CI](CircleCI) added the backend-rotater
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,13 @@ jobs:
             docker run --rm xyz
 
       - run:
+          name: Unit-Testing backend-rotator
+          command: |
+            cd src/backend/rotator
+            docker build --target test -t xyz .
+            docker run --rm xyz
+
+      - run:
           name: Unit-Testing frontend
           command: |
             cd src/frontend
