--- a/deploy/rollouts/deploy-frontend.yml
+++ b/deploy/rollouts/deploy-frontend.yml
@@ -34,8 +34,7 @@ metadata:
   namespace: pdf-editor-ns
 spec:
   rules:
-  - host: pdf-editor
-    http:
+  - http:
       paths:
       - pathType: Prefix
         path: "/"
