Added Constrains for running GHActions
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -2,6 +2,9 @@ name: PR Checks 🤞🏼
 
 on:
   pull_request:
+    paths:
+    - 'src/**'
+    - 'build.sh'
     branches: [ main ]
 jobs:
   golang_build:
