--- a/deploy/Logging/deploy.yml
+++ b/deploy/Logging/deploy.yml
@@ -12,7 +12,7 @@ spec:
     matchLabels:
       app.kubernetes.io/name: loki
       stack: logging
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
@@ -56,6 +56,7 @@ spec:
     matchLabels:
       app.kubernetes.io/name: fluent-bit
       stack: logging
+  replicas: 2
 
   template:
     metadata:
@@ -84,65 +85,52 @@ spec:
           path: /var/log/
           # this field is optional
           type: Directory
----
-# apiVersion: v1
-# kind: Service
+# ---
+
+# apiVersion: apps/v1
+# kind: Deployment
 # metadata:
-#   namespace: pdf-editor-ns
-#   name: fluent-bit
+#   name: grafana
 #   labels:
-#     app.kubernetes.io/service: fluent-bit
+#     app.kubernetes.io/name: grafana
 #     stack: logging
 # spec:
 #   selector:
-#     app.kubernetes.io/name: fluent-bit
+#     matchLabels:
+#       app.kubernetes.io/name: grafana
+#       stack: logging
+#   replicas: 2
+#   template:
+#     metadata:
+#       labels:
+#         app.kubernetes.io/name: grafana
+#         stack: logging
+#     spec:
+#       containers:
+#       - name: grafana
+#         image: grafana/grafana:latest
+#         env:
+#         - name: GF_AUTH_DISABLE_LOGIN_FORM
+#           value: "true"
+#         - name: GF_AUTH_ANONYMOUS_ENABLED
+#           value: "true"
+#         - name: GF_AUTH_ANONYMOUS_ORG_ROLE
+#           value: "Admin"
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: grafana
+#   labels:
+#     app.kubernetes.io/service: grafana
 #     stack: logging
+# spec:
+#   selector:
+#     app.kubernetes.io/name: grafana
+#     stack: logging
+#   type: NodePort
 #   ports:
-#   - port: <Port>
-#     targetPort: <Target Port>
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: grafana
-  labels:
-    app.kubernetes.io/name: grafana
-    stack: logging
-spec:
-  selector:
-    matchLabels:
-      app.kubernetes.io/name: grafana
-      stack: logging
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/name: grafana
-        stack: logging
-    spec:
-      containers:
-      - name: grafana
-        image: grafana/grafana:latest
-        env:
-        - name: GF_AUTH_DISABLE_LOGIN_FORM
-          value: "true"
-        - name: GF_AUTH_ANONYMOUS_ENABLED
-          value: "true"
-        - name: GF_AUTH_ANONYMOUS_ORG_ROLE
-          value: "Admin"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: grafana
-  labels:
-    app.kubernetes.io/service: grafana
-    stack: logging
-spec:
-  selector:
-    app.kubernetes.io/name: grafana
-    stack: logging
-  type: NodePort
-  ports:
-  - port: 3000
-    targetPort: 3000
+#   - port: 3000
+#     targetPort: 3000
 
 ...
